# BubbleBobble

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Game.cpp  README.md  build_web.sh
.github/workflows/: cmake.yml
Assets/Levels/: Level1.jxl  Levels.jxl
Scores/: Scores.txt
src/: CharacterInput.cpp  CharacterInput.h  Game.cpp  Game.h  GameEntry.cpp  GameScore.cpp  GameScore.h  IBubbleable.h  IDamagable.h  IDamageable.h  InputActions.cpp  InputActions.h  Prefabs.cpp  Prefabs.h  Scenes.cpp  Scenes.h
src/Components/: AttackBubble.cpp  AttackBubble.h  AutoMove.cpp  AutoMove.h  AutoRotateAround.cpp  AutoRotateAround.h  Boulder.cpp  Boulder.h  Bounce.cpp  BubbleSpiral.cpp  BubbleSpiral.h  CaptureBubble.cpp  CaptureBubble.h  Character.cpp  Character.h  CharacterInput.cpp  CharacterInput.h  DeadEnemy.cpp  DeadEnemy.h  FpsCounter.cpp  FpsCounter.h  Health.cpp  Health.h  LevelHUD.cpp  LevelHUD.h  LevelState.cpp  LevelState.h  MainMenu.cpp  MainMenu.h  OneWayPlatform.cpp  OneWayPlatform.h  Pickup.cpp  Pickup.h  Player.cpp  Player.h  PlayerHUD.cpp  PlayerHUD.h  ScoreScreen.cpp  ScoreScreen.h
src/Components/Character/: CharacterInput.cpp  CharacterInput.h
src/Components/Character/Enemys/: Enemy.cpp  Enemy.h  Maita.cpp  Maita.h  MaitaBehaviour.cpp  MaitaBehaviour.h  ZenChan.cpp  ZenChan.h  ZenChanBehaviour.h
src/Components/Character/Player/: Player.cpp  Player.h  PlayerState.h
src/Components/Enemys/: Enemy.cpp  Enemy.h  Maita.cpp  Maita.h  MaitaBehaviour.cpp  MaitaBehaviour.h  ZenChan.cpp  ZenChan.h  ZenChanBehaviour.cpp  ZenChanBehaviour.h  ZenChanState.cpp  ZenChanState.h
src/Components/Level/: AutoMove.h  AutoRotateAround.cpp  AutoRotateAround.h  BubbleSpiral.h  LevelState.cpp  LevelState.h
src/Components/Player/: Player.cpp  Player.h  PlayerState.cpp  PlayerState.h
src/Components/UI/: FpsCounter.cpp  LevelHUD.cpp  LevelHUD.h  MainMenu.h  PlayerHUD.cpp  ScoreScreen.cpp
